# scantivy

./: CHANGELOG.md  LICENSE  README.md  RELEASING.md  TODO.md  build.sh
.github/workflows/: ci.yml  release.yml
.metals/: metals.mv.db
rust/: Cargo.toml  build.rs
rust/proto/: scantivy.proto
rust/src/: aggregate.rs  convert.rs  distinct.rs  error.rs  index.rs  lib.rs  query.rs  schema.rs  search.rs
scala/: .gitignore  build.sbt
scala/project/: plugins.sbt
scala/src/main/protobuf/: scantivy.proto
scala/src/main/scala/scantivy/: NativeLibLoader.scala  Tantivy.scala  TantivyIndex.scala  TantivyLib.scala
scala/src/test/scala/scantivy/: ScantivySmokeSpec.scala
