[package]
name = "scantivy"
version = "1.0.0-SNAPSHOT"
edition = "2024"

[dependencies]
tantivy = "0.26"
parking_lot = "0.12"
regex = "1"
prost = "0.14"
prost-types = "0.14"
bytes = "1.8"
thiserror = "2"
sha2 = "0.11"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
prost-build = "0.14"

[profile.release]
lto = "thin"
codegen-units = 1
